# MyProjects

./: Gptapp.py  README.md
Gpt-fastapi-ai-app/: gpt-fastapi-ai-app  pyproject.toml
Llama-question-answering-bot/: README.md
Llama_Q&Abot/: lama-question-answering-bot
Rag-wikipedia-qa-system/: rag-wikipedia-qa-system
app.py/: README.md  requirements.txt
crewai-ai-research-writer/: README.md  agents.py  main.py  requirements.txt  tasks.py
